style text input and append multiple images

--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -5,9 +5,12 @@
   padding: 0.2em 0;
 }
 
+.viewport-height {
+  max-height: 90vh;
+}
+
 /* Space out content a bit */
 body {
-  padding-top: 20px;
   padding-bottom: 20px;
 }
 
