--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -1,3 +1,10 @@
+.mynavbar {
+  background-color: #f8f8f8;
+  border: 1px solid #e7e7e7;
+  margin-bottom: 30px;
+  padding: 0px;
+}
+
 .browserupgrade {
   margin: 0.2em 0;
   background: #ccc;
