--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -1,3 +1,33 @@
+
+
+/* loading animated spinner */
+.glyphicon-spin {
+    -webkit-animation: spin 1000ms infinite linear;
+    animation: spin 1000ms infinite linear;
+}
+
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(359deg);
+        transform: rotate(359deg);
+    }
+}
+@keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(359deg);
+        transform: rotate(359deg);
+    }
+}
+
+/* search button bar  */
 .mynavbar {
   background-color: #f8f8f8;
   border: 1px solid #e7e7e7;
@@ -9,10 +39,6 @@
   background: #ccc;
   color: #000;
   padding: 0.2em 0;
-}
-
-.viewport-height {
-  max-height: 90vh;
 }
 
 /* Space out content a bit */
